changes to the modifier keys